Build against CLion 2026.1 and fix HighlightingSession API
- Use localPath for CLion 2026.1 instead of IntelliJ 2024.2
- Add runIdeHeadless task for TCP LSP server mode
- Update since/until build versions for CLion 261-262
- Remove broken HighlightingSession API call in DiagnosticsTask
- Use cidr-clangd plugin for C++ support